--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,6 @@ dependencies {
     implementation 'org.slf4j:slf4j-simple:1.7.21'
     implementation 'org.sql2o:sql2o:1.5.4'
     testImplementation group: 'com.h2database', name: 'h2', version: '1.3.148'
-    implementation 'com.google.code.gson:gson:2.5'  // to be explained shortly
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.2' // ADD ME FOR POSTGRES VERSION 10.x
 }
